--- a/common_ui/src/main/res/layout/headlayout.xml
+++ b/common_ui/src/main/res/layout/headlayout.xml
@@ -39,11 +39,12 @@
         <ViewStub
             android:layout_marginTop="30dp"
             android:id="@+id/head_right_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="60dp"
+            android:layout_height="30dp"
             android:layout_alignParentRight="true"
             android:layout_alignParentTop="true"
             android:layout_marginRight="12dp"
+            android:layout_marginBottom="8dp"
             android:layout="@layout/head_right_text"
         />
         <ViewStub
