--- a/common_bokang/src/main/res/layout/delegate_personaldata.xml
+++ b/common_bokang/src/main/res/layout/delegate_personaldata.xml
@@ -2,7 +2,8 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/main_background_default_f5">
     <com.example.latte.ui.widget.HeadLayout
         android:id="@+id/head_layout"
         android:layout_width="match_parent"
@@ -10,19 +11,19 @@
         android:layout_height="64dp"/>
     <LinearLayout
         android:background="#ffffff"
-        android:layout_marginTop="13dp"
+        android:layout_marginTop="1dp"
         android:id="@+id/head_portrait_layout"
-        android:layout_marginRight="15dp"
-        android:layout_marginLeft="15dp"
+        android:paddingRight="15dp"
+        android:paddingLeft="15dp"
         android:layout_width="match_parent"
         android:layout_below="@+id/head_layout"
         android:orientation="horizontal"
-        android:layout_height="51dp">
+        android:layout_height="58dp">
         <TextView
             android:layout_weight="1"
             android:layout_width="0dp"
-            android:layout_marginLeft="14dp"
             android:textSize="16sp"
+            android:textColor="@color/light_black"
             android:layout_gravity="center_vertical"
             android:text="头像"
             android:layout_height="wrap_content" />
@@ -30,30 +31,40 @@
             android:id="@+id/head_portrait"
             android:layout_width="36dp"
             android:layout_gravity="center_vertical"
-            android:layout_marginRight="40dp"
+            android:layout_marginRight="10dp"
             android:scaleType="fitXY"
             android:layout_height="36dp" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:scaleType="fitXY"
+            android:src="@mipmap/icon_right_back"
+            android:layout_height="wrap_content" />
     </LinearLayout>
 
     <RelativeLayout
         android:background="#ffffff"
         android:id="@+id/user_name_layout"
-        android:layout_marginRight="15dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="10dp"
+        android:paddingLeft="15dp"
         android:layout_width="match_parent"
         android:layout_below="@+id/head_portrait_layout"
-        android:layout_height="51dp"
-        android:gravity="center_vertical">
+        android:layout_height="46dp">
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/main_background_default_f5"
+            android:layout_alignParentTop="true"/>
         <TextView
             android:layout_weight="1"
             android:layout_width="wrap_content"
-            android:layout_marginLeft="14dp"
             android:textSize="16sp"
             android:minWidth="50dp"
             android:layout_gravity="center_vertical"
             android:text="昵称"
+            android:layout_centerVertical="true"
             android:id="@+id/nickname_key"
+            android:textColor="@color/light_black"
             android:layout_height="wrap_content" />
         <TextView
             android:id="@+id/user_name"
@@ -61,13 +72,14 @@
             android:layout_height="wrap_content"
             android:gravity="end"
             android:layout_toRightOf="@id/nickname_key"
-            android:text="xxxxx"
             android:layout_gravity="center_vertical"
             android:textSize="16sp"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="15dp"
             android:singleLine="true"
-            android:layout_marginRight="40dp"
-            android:textColor="#CECECE"
-            />
+            android:textColor="#999999"
+            android:drawableRight="@mipmap/icon_right_back"
+            android:drawablePadding="10dp"/>
     </RelativeLayout>
 
 </RelativeLayout>
