--- a/common_ui/src/main/res/layout/head_right_text.xml
+++ b/common_ui/src/main/res/layout/head_right_text.xml
@@ -3,7 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/head_right_text"
     android:text="发送"
+    android:textColor="@color/white"
     android:textSize="15sp"
+    android:gravity="center"
+    android:background="@drawable/rectangle_main_orange"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
