--- a/common_bokang/src/main/res/layout/include_item_index_commet_withdelete.xml
+++ b/common_bokang/src/main/res/layout/include_item_index_commet_withdelete.xml
@@ -11,23 +11,22 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="10dp">
+        android:paddingRight="4dp">
 
-        <android.support.v7.widget.AppCompatTextView
+        <ImageView
             android:id="@+id/tv_cansee"
-            android:layout_width="18dp"
-            android:layout_height="18dp"
-            android:layout_marginEnd="15dp"
-            android:background="@mipmap/icon_index_cansee"/>
+            android:layout_width="40dp"
+            android:layout_height="30dp"
+            android:scaleType="center"
+            android:src="@mipmap/icon_index_cansee"/>
 
-        <android.support.v7.widget.AppCompatTextView
+        <ImageView
             android:id="@+id/tv_delete"
-            android:layout_width="18dp"
-            android:layout_height="18dp"
-            android:layout_marginStart="15dp"
-            android:layout_marginEnd="15dp"
+            android:layout_width="40dp"
+            android:layout_height="30dp"
+            android:scaleType="center"
             android:layout_toRightOf="@id/tv_cansee"
-            android:background="@mipmap/icon_index_delete"
+            android:src="@mipmap/icon_index_delete"
 
             />
     </RelativeLayout>
