--- a/common_bokang/src/main/res/layout/delegate_setup.xml
+++ b/common_bokang/src/main/res/layout/delegate_setup.xml
@@ -4,12 +4,8 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     android:orientation="vertical">
-
-    <com.example.latte.ui.widget.HeadLayout
-        android:id="@+id/head_layout"
-        android:layout_width="match_parent"
-        android:layout_height="64dp"
-        android:gravity="center_vertical" />
+<include
+    layout="@layout/include_edit_top"/>
 
     <LinearLayout
         android:id="@+id/specified"
