发表动态 页面调整

--- a/common_bokang/src/main/res/layout/delegate_edit_picture.xml
+++ b/common_bokang/src/main/res/layout/delegate_edit_picture.xml
@@ -1,33 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+                                              android:layout_width="match_parent"
+                                              android:layout_height="match_parent"
+                                              android:background="@color/main_background_default_f5"
+                                              android:orientation="vertical">
 
     <include layout="@layout/include_edit_top"/>
+
     <android.support.v7.widget.AppCompatEditText
         android:id="@+id/et_text"
-        android:hint="说点什么吧！"
-        android:textCursorDrawable="@drawable/line_black"
-        android:layout_marginStart="15dp"
-        android:layout_marginEnd="15dp"
+        android:layout_width="match_parent"
+        android:layout_height="110dp"
         android:background="@drawable/et_send_text"
         android:gravity="top|start"
-        android:padding="10dp"
-        android:textSize="16sp"
+        android:hint="说点什么吧！"
+        android:paddingBottom="10dp"
+        android:paddingLeft="25dp"
+        android:paddingRight="25dp"
+        android:paddingTop="10dp"
         android:textColor="@color/app_text_dark"
         android:textColorHint="@color/app_text_gray"
-        android:layout_width="match_parent"
-        android:layout_height="110dp" />
+        android:textCursorDrawable="@drawable/line_black"
+        android:textSize="16sp"/>
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_imgs"
-        android:background="@color/white"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:layout_marginEnd="15dp"
-        android:layout_marginTop="10dp"
-        android:overScrollMode="never" />
+        android:layout_marginTop="1dp"
+        android:background="@color/white"
+        android:overScrollMode="never"
+        android:paddingLeft="25dp"
+        android:paddingRight="25dp"/>
 
 
 </android.support.v7.widget.LinearLayoutCompat>
