--- a/common_bokang/src/main/res/layout/gv_filter_image_one_big.xml
+++ b/common_bokang/src/main/res/layout/gv_filter_image_one_big.xml
@@ -14,8 +14,8 @@
             android:id="@+id/fiv"
             android:layout_width="167dp"
             android:layout_height="167dp"
-            android:scaleType="centerCrop"
-            android:src="@color/color_f6" />
+            android:scaleType="centerInside"
+            android:background="@drawable/white_button_bg"/>
 
         <LinearLayout
             android:id="@+id/ll_del"
