--- a/common_bokang/src/main/res/layout/include_edit_top.xml
+++ b/common_bokang/src/main/res/layout/include_edit_top.xml
@@ -42,22 +42,22 @@
         android:layout_marginBottom="11dp"
         android:background="@drawable/rectangle_main_orange"
         android:paddingStart="15dp"
-        android:paddingTop="4dp"
+        android:paddingTop="2dp"
         android:paddingEnd="15dp"
-        android:paddingBottom="4dp"
+        android:paddingBottom="2dp"
         android:text="发送"
         android:textColor="@color/white"
         android:textSize="15sp" />
 
-    <android.support.v7.widget.AppCompatTextView
+    <ImageView
         android:id="@+id/tv_icon"
-        android:layout_width="18dp"
-        android:layout_height="18dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:scaleType="centerInside"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="15dp"
-        android:layout_marginBottom="12dp"
-        android:background="@mipmap/icon_add_jianhuren"
+        android:src="@mipmap/icon_add_jianhuren"
         android:visibility="gone" />
 
     <ImageView
