--- a/tuikit4.2.52/src/main/res/layout/chat_adapter_file_self.xml
+++ b/tuikit4.2.52/src/main/res/layout/chat_adapter_file_self.xml
@@ -152,8 +152,7 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_gravity="top"
-            app:default_image="@drawable/default_user_icon"
-            app:image_radius="10dp" />
+            app:default_image="@drawable/default_user_icon" />
 
 
     </LinearLayout>
