家庭医生 头像修改

--- a/common_bokang/src/main/res/layout/delegate_homedoctor_in_use_recyc.xml
+++ b/common_bokang/src/main/res/layout/delegate_homedoctor_in_use_recyc.xml
@@ -4,6 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@color/main_background_default_f5"
     android:layout_height="match_parent">
 
     <include
@@ -34,8 +35,8 @@
 
             <android.support.v7.widget.AppCompatTextView
                 android:id="@+id/tv_close"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:background="@mipmap/checkbox_docin_title_top"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
