--- a/common_bokang/src/main/res/layout/delegate_homedoctor.xml
+++ b/common_bokang/src/main/res/layout/delegate_homedoctor.xml
@@ -4,7 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/main_background_default_f5">
 
     <include
         android:id="@+id/include3"
@@ -16,9 +17,8 @@
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/srl_index"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:fillViewport="true"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/include3">
