--- a/common_bokang/src/main/res/layout/delegate_homedoctor.xml
+++ b/common_bokang/src/main/res/layout/delegate_homedoctor.xml
@@ -16,20 +16,17 @@
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/srl_index"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fillViewport="true"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/include3">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/include3">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_guardianship"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
 
     </android.support.v4.widget.SwipeRefreshLayout>
 
