--- a/common_bokang/src/main/res/values/styles.xml
+++ b/common_bokang/src/main/res/values/styles.xml
@@ -8,4 +8,10 @@
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
+
+    <style name="adapter_empty_bg">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:background">@color/main_background_default_f5</item>
+    </style>
 </resources>
