--- a/ocr_ui/src/main/res/layout/bd_ocr_activity_camera.xml
+++ b/ocr_ui/src/main/res/layout/bd_ocr_activity_camera.xml
@@ -6,7 +6,6 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
     <include
             android:id="@+id/take_picture_container"
             android:layout_height="match_parent"
@@ -26,5 +25,19 @@
             android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
+    <RelativeLayout
+        android:id="@+id/tv_back"
+        android:layout_width="44dp"
+        android:layout_height="64dp">
+
+        <android.support.v7.widget.AppCompatTextView
+            android:id="@+id/tv_back_icon"
+            android:layout_width="18dp"
+            android:layout_height="18dp"
+            android:layout_alignParentBottom="true"
+            android:layout_centerInParent="true"
+            android:layout_marginBottom="11dp"
+            android:background="@drawable/back_white" />
+    </RelativeLayout>
 
 </RelativeLayout>
