--- a/common_bokang/src/main/res/layout/include_undevelop.xml
+++ b/common_bokang/src/main/res/layout/include_undevelop.xml
@@ -3,15 +3,16 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    style="@style/adapter_empty_bg"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     >
 
     <ImageView
         android:id="@+id/iv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="166dp"
-        android:src="@mipmap/icon_homedoctor_no_background"
+        android:layout_marginTop="174dp"
+        android:src="@mipmap/icon_undevelop"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -20,7 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="暂无好友，快去加好友吧！"
+        android:text="正在开发中，请耐心等待！"
         android:textColor="@color/main_text_black_dark"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
