--- a/common_bokang/src/main/res/layout/delegate_user_detail.xml
+++ b/common_bokang/src/main/res/layout/delegate_user_detail.xml
@@ -124,13 +124,13 @@
     <android.support.v7.widget.AppCompatTextView
         android:id="@+id/user_detail_send_msg"
         android:layout_width="0dp"
-        android:layout_height="40dp"
+        android:layout_height="52dp"
         android:layout_marginTop="10dp"
         android:background="@color/white"
         android:gravity="center"
         android:text="@string/send_msg"
         android:textColor="@color/text_FDBA63"
-        android:textSize="@dimen/sp_16"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/cl_permisson"/>
@@ -138,13 +138,13 @@
     <android.support.v7.widget.AppCompatTextView
         android:id="@+id/user_detail_send_call"
         android:layout_width="0dp"
-        android:layout_height="40dp"
+        android:layout_height="52dp"
         android:layout_marginTop="1dp"
         android:background="@color/white"
         android:gravity="center"
         android:text="@string/send_call"
         android:textColor="@color/text_FDBA63"
-        android:textSize="@dimen/sp_16"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/user_detail_send_msg"/>
