可见范围\朋友圈视频\显示时间\首页顶部间距

--- a/common_bokang/src/main/res/layout/delegate_robot_setting_remind.xml
+++ b/common_bokang/src/main/res/layout/delegate_robot_setting_remind.xml
@@ -83,6 +83,7 @@
 
             app:tsb_show_tick_marks_type="divider"
             app:tsb_thumb_color="@color/main_text_orange"
+            app:tsb_track_progress_color="@color/main_text_orange"
             app:tsb_show_tick_texts="below"
             app:tsb_tick_marks_color="@color/main_text_orange"
             app:tsb_tick_texts_color="@color/selector_tick_texts_2_color"
