--- a/common_bokang/src/main/res/layout/delegate_index_yijia2.xml
+++ b/common_bokang/src/main/res/layout/delegate_index_yijia2.xml
@@ -105,7 +105,7 @@
                         android:layout_alignLeft="@id/tv_name"
                         android:layout_alignBottom="@id/cimg_img"
                         android:layout_marginBottom="5dp"
-                        android:textColor="@color/COLOR_8d8d8d"
+                        android:textColor="@color/COLOR_999999"
                         android:textSize="15sp"
                         tools:text="@string/xy_online" />
                 </RelativeLayout>
