--- a/common_bokang/src/main/res/layout/item_robot_main_list.xml
+++ b/common_bokang/src/main/res/layout/item_robot_main_list.xml
@@ -50,7 +50,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/iv_img"
         android:layout_marginEnd="15dp"
-        tools:text="小壹在家"/>
+        android:gravity="center_vertical"
+        android:drawableRight="@mipmap/icon_right_back"
+        android:drawablePadding="10dp"
+        tools:text="小壹在线"/>
 
     <android.support.v7.widget.AppCompatTextView
         android:id="@+id/tv_relationship"
