--- a/common_bokang/src/main/res/values/colors.xml
+++ b/common_bokang/src/main/res/values/colors.xml
@@ -28,4 +28,5 @@
     <color name="COLOR_999999">#999999</color>
     <color name="COLOR_efefef">#efefef</color>
     <color name="COLOR_8d8d8d">#8d8d8d</color>
+    <color name="COLOR_6daaf0">#6DAAF0</color>
 </resources>
