--- a/common_bokang/src/main/res/layout/delegate_add_parents.xml
+++ b/common_bokang/src/main/res/layout/delegate_add_parents.xml
@@ -23,7 +23,20 @@
         android:textColor="@color/app_text_dark"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/title"/>
+
+    <TextView
+        android:id="@+id/add_parents_title_tip"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="@string/add_parents_title_tip"
+        android:textColor="@color/app_text_dark"
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/add_parents_title"/>
 
     <android.support.constraint.Guideline
         android:id="@+id/guideline"
@@ -44,7 +57,7 @@
         android:textColor="@color/white"
         android:textSize="18sp"
         app:layout_constraintRight_toLeftOf="@id/guideline"
-        app:layout_constraintTop_toBottomOf="@id/add_parents_title"/>
+        app:layout_constraintTop_toBottomOf="@id/add_parents_title_tip"/>
 
     <TextView
         android:id="@+id/add_parents_mather"
