修改状态栏背景  机器人大小

--- a/tencent_trtc_sdk/src/main/res/values/colors.xml
+++ b/tencent_trtc_sdk/src/main/res/values/colors.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="status_bar_bg">#77000000</color>
     <color name="tencent_tls_ui_white">#FFFFFF</color>
     <color name="tencent_tls_ui_gray">#444444</color>
     <color name="tencent_tls_ui_shadowgray">#CCCCCC</color>
