--- a/common_bokang/src/main/res/layout/include_edit_top.xml
+++ b/common_bokang/src/main/res/layout/include_edit_top.xml
@@ -5,6 +5,11 @@
     android:id="@+id/rl_top"
     android:background="@color/white">
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:background="#33333333"/>
+
     <RelativeLayout
         android:id="@+id/tv_back"
         android:layout_width="44dp"
